# EC-motel-management

./: .gitignore
backend/: .env.example  Makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_create_rooms.py  0003_create_tenants.py  0004_create_contracts.py  0005_create_expenses.py  0006_create_posts.py  0007_create_notifications.py  0008_create_activity_log.py  0009_create_chat_conversations_messages.py  0010_create_agent_automations_tables.py  0011_add_tenant_email.py
backend/app/: main.py  scheduler.py
backend/app/common/: enums.py  exceptions.py  export.py  pagination.py  schemas.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/integrations/: email.py  facebook_graph.py  meta_send_api.py  storage.py
backend/app/integrations/templates/: contract_expiry.html  payment_reminder.html  weekly_digest.html
backend/app/modules/activity/: models.py  repository.py  schemas.py  service.py
backend/app/modules/agent/: context_builder.py  (+5 more)
backend/docs/api-contracts/: auth-users.md
backend/tests/: conftest.py  test_auth.py  test_common.py  test_config.py  test_enums.py  test_security.py  test_signature.py
backend/tests/modules/: test_agent.py  test_automations.py  test_contracts.py  test_conversations.py  test_dashboard.py  test_email.py  test_expenses.py  test_export.py  test_facebook_publish.py  test_notifications.py  test_posts.py  test_reports.py  test_rooms.py  test_storage.py  test_tenants.py  test_users.py  test_webhooks_facebook.py  test_workflow_templates.py
(+176 files in other folders)
